# quantumspark_ecs

./: CMakeLists.txt  README.md
src/: component.h  entity.h  managed.cpp  managed.h
src/math/: vector.cpp  vector.h
